--- a/production/docker-compose.yml
+++ b/production/docker-compose.yml
@@ -1,42 +1,84 @@
+version: "2"
+services:
 
-db:
-  image: grafana/tns-db
-  command:
-    - '-log.level=debug'
-  ports:
-    - 0.0.0.0:8000:80
-#  environment:
-#    JAEGER_AGENT_HOST: jaeger
-#    JAEGER_TAGS: cluster=tns,namespace=tns
-#    JAEGER_SAMPLE_TYPE: const
-#    JAEGER_SAMPLE_PARAM: 1
+  db:
+    image: grafana/tns-db
+    command:
+      - '-log.level=debug'
+    ports:
+      - 0.0.0.0:8000:80
+    environment:
+      JAEGER_ENDPOINT: 'http://tempo:14268'
+      JAEGER_TAGS: cluster=tns,namespace=tns
+      JAEGER_SAMPLER_TYPE: probabilistic
+      JAEGER_SAMPLER_PARAM: 1
 
-app:
-  image: grafana/tns-app
-  command:
-    - '-log.level=debug'
-    - 'http://db'
-  links:
-    - db
-  ports:
-    - 0.0.0.0:8001:80
-#  environment:
-#    JAEGER_AGENT_HOST: jaeger
-#    JAEGER_TAGS: cluster=tns,namespace=tns
-#    JAEGER_SAMPLE_TYPE: const
-#    JAEGER_SAMPLE_PARAM: 1
+  app:
+    image: grafana/tns-app
+    command:
+      - '-log.level=debug'
+      - 'http://db'
+    links:
+      - db
+    ports:
+      - 0.0.0.0:8001:80
+    environment:
+      JAEGER_ENDPOINT: 'http://tempo:14268'
+      JAEGER_TAGS: cluster=tns,namespace=tns
+      JAEGER_SAMPLER_TYPE: probabilistic
+      JAEGER_SAMPLER_PARAM: 1
 
-loadgen:
-  image: grafana/tns-loadgen
-  command:
-    - '-log.level=debug'
-    - 'http://app'
-  links:
-    - app
-  ports:
-    - 0.0.0.0:8002:80
-#  environment:
-#    JAEGER_AGENT_HOST: jaeger
-#    JAEGER_TAGS: cluster=tns,namespace=tns
-#    JAEGER_SAMPLE_TYPE: const
-#    JAEGER_SAMPLE_PARAM: 1
+  loadgen:
+    image: grafana/tns-loadgen
+    command:
+      - '-log.level=debug'
+      - 'http://app'
+    links:
+      - app
+    ports:
+      - 0.0.0.0:8002:80
+    environment:
+      JAEGER_ENDPOINT: 'http://tempo:14268'
+      JAEGER_TAGS: cluster=tns,namespace=tns
+      JAEGER_SAMPLER_TYPE: probabilistic
+      JAEGER_SAMPLER_PARAM: 1
+
+  prometheus:
+    image: prom/prometheus-linux-amd64:pr-6635
+    volumes:
+      - ./prometheus.yaml:/etc/prometheus/prometheus.yml
+    links:
+      - app
+      - db
+      - loadgen
+    ports:
+      - 0.0.0.0:8003:9090
+
+  tempo:
+    image: tempo:latest
+    command: ["-config.file=/etc/tempo.yaml"]
+    volumes:
+      - ./tempo.yaml:/etc/tempo.yaml
+      - /tmp/tempo:/tmp/tempo
+    ports:
+      - "8004:3100"  # tempo
+
+  minio:
+    image: minio/minio:RELEASE.2020-07-27T18-37-02Z
+    environment:
+      - MINIO_ACCESS_KEY=tempo
+      - MINIO_SECRET_KEY=supersecret
+    ports:
+      - "8005:9000"
+    entrypoint:
+      - sh
+      - -euc
+      - mkdir -p /data/tempo && /usr/bin/minio server /data
+
+  tempo-query:
+    image: tempo-query:latest
+    command: ["--grpc-storage-plugin.configuration-file=/etc/tempo-query.yaml"]
+    volumes:
+      - ./tempo-query.yaml:/etc/tempo-query.yaml
+    ports:
+      - "8006:16686"  # jaeger-ui
