--- a/production/docker-compose.yml
+++ b/production/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       JAEGER_SAMPLER_PARAM: 1
 
   prometheus:
-    image: cstyan/prometheus:exemplars-cd49a1
+    image: cstyan/prometheus:exemplars-64206a
     volumes:
       - ./prometheus.yaml:/etc/prometheus/prometheus.yml
     links:
