Add Grafana, datasources and fix up Promethues jobs
Signed-off-by: Tom Wilkie <tom.wilkie@gmail.com>

--- a/production/docker-compose.yml
+++ b/production/docker-compose.yml
@@ -1,6 +1,13 @@
 version: "2"
 services:
 
+  grafana:
+    image: tomwilkie/grafana:exemplars-1
+    volumes:
+      - ./datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
+    ports:
+    - "3000:3000"
+
   db:
     image: grafana/tns-db
     command:
