--- a/production/datasources.yaml
+++ b/production/datasources.yaml
@@ -9,6 +9,10 @@ datasources:
     type: prometheus
     url: http://prometheus:9090/
     version: 1
+    jsonData:
+      exemplarTraceIDDestination:
+        name: traceID
+        url: "http://localhost:3000/explore?orgId=1&left=%5B%22now-1h%22,%22now%22,%22Jaeger%22,%7B%22query%22:%22$${value}%22%7D%5D"
   - access: proxy
     editable: false
     isDefault: false
